# SC64-GUI

./: CMakeLists.txt  Main.qml  README.md  fatfs_glue.cpp  fatfs_ops_test.c  fatfs_ramdisk_test.c  sc64controller.cpp  sc64controller.h  sc64filesystem.cpp  sc64filesystem.h
.github/workflows/: main.yml  windows.yml
packaging/: 60-sc64.rules  sc64gui.desktop.in  sc64gui.metainfo.xml.in
qml/: Main.qml
src/: main.cpp  sc64controller.cpp  sc64controller.h  sc64device.cpp  sc64device.h  sc64filesystem.cpp  sc64filesystem.h
